kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: analytics-for-spotify
  labels:
    app.kubernetes.io/instance: analytics-for-spotify
