kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-for-spotify
  namespace: analytics-for-spotify
  labels:
    app: analytics-for-spotify
    app.kubernetes.io/instance: analytics-for-spotify
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: analytics-for-spotify
  template:
    metadata:
      labels:
        app: analytics-for-spotify
      annotations:
        enable.version-checker.io/analytics-for-spotify: "false"
        seccomp.security.alpha.kubernetes.io/defaultProfileName: "runtime/default"
    spec:
      hostname: analytics-for-spotify
      restartPolicy: Always
      # securityContext:
      # runAsUser: 10033
      # runAsGroup: 30000
      # fsGroup: 20000
      automountServiceAccountToken: false
      containers:
        - securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            # runAsUser: 10033
            capabilities:
              drop:
                - all
          livenessProbe:
            httpGet:
              path: /analytics/health/
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /analytics/health/
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
          image: <IMAGE>:<VERSION>
          imagePullPolicy: IfNotPresent
          name: analytics-for-spotify
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 150m
              memory: 250M
            requests:
              cpu: 50m
              memory: 175M
